--- a/package.json
+++ b/package.json
@@ -14,16 +14,13 @@
     "devDependencies": {
         "@types/body-parser": "^1.19.3",
         "@types/compression": "^1.7.3",
-        "@types/cookie-parser": "^1.4.4",
         "@types/cors": "^2.8.14",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.18",
         "@types/lodash": "^4.14.199",
-        "@types/mongoose": "^5.11.97",
         "@types/node": "^20.8.8",
-        "@types/node-cron": "^3.0.10",
-        "@types/nodemailer": "^6.4.13",
         "@types/pg": "^8.10.7",
+        "@types/socket.io": "^3.0.2",
         "@types/ws": "^8.5.8",
         "@typescript-eslint/eslint-plugin": "^6.7.4",
         "@typescript-eslint/parser": "^6.7.4",
@@ -46,6 +43,7 @@
         "lodash": "^4.17.21",
         "nodemon": "^2.0.19",
         "pg": "^8.11.3",
+        "socket.io": "^4.7.2",
         "ws": "^8.14.2"
     }
 }
