--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "heroku": "^8.7.0",
         "http-status-codes": "^2.3.0",
         "lodash": "^4.17.21",
         "nodemon": "^2.0.19",
