--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon ./src/index.ts",
-        "build": "rimraf dist && tsc"
+        "build": "rimraf dist && tsc",
+        "ts.check": "tsc --project tsconfig.json",
+        "add-build": "git add dist"
     },
     "keywords": [],
     "author": "",
@@ -30,7 +32,9 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-unused-imports": "^3.0.0",
+        "pre-commit": "^1.2.2",
         "prettier": "2.7.1",
+        "rimraf": "^5.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     },
@@ -40,12 +44,16 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "heroku": "^8.7.0",
         "http-status-codes": "^2.3.0",
         "lodash": "^4.17.21",
         "nodemon": "^2.0.19",
         "pg": "^8.11.3",
         "socket.io": "^4.7.2",
         "ws": "^8.14.2"
-    }
+    },
+    "pre-commit": [
+        "ts.check",
+        "build",
+        "add-build"
+    ]
 }
