--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,7 @@
 {
     "typescript.tsdk": "node_modules\\typescript\\lib",
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact",
-        "typescript",
-        "typescriptreact"
-    ],
+    "eslint.validate": ["javascript", "typescript"],
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
-    },
-    "css.validate": false,
-    "less.validate": false,
-    "scss.validate": false,
+    }
 }
